[project]
name = "lvgl"
version = "0.1.0b"
description = "README.md"
authors = [{name = "Kevin G. Schlosser"}, {name="Many other contributors"}]
maintainers = [{name = "Kevin G. Schlosser"}]
classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: Implementation :: CPython",
    "Intended Audience :: Developers",
    "Topic :: Home Automation",
    "Topic :: Multimedia :: Graphics",
    "Topic :: Software Development :: Embedded Systems",
    "Topic :: Software Development :: User Interfaces",
    "Operating System :: Microsoft :: Windows :: Windows 11",
    "Operating System :: Microsoft :: Windows :: Windows 10",
    "Operating System :: Microsoft :: Windows :: Windows 8",
    "Operating System :: Microsoft :: Windows :: Windows 7",
    "Operating System :: POSIX :: BSD",
    "Operating System :: POSIX :: Linux",
    "Operating System :: POSIX :: SunOS/Solaris",
    "Operating System :: MacOS :: MacOS X"
]
keywords = ["LVGL", "LV", "lvgl", "lv", "graphics", "gui", "gui framework"]
license = {file = "LICENSE"}
readme = "README.md"
requires-python = ">=3.6"

[project.urls]
Homepage = "https://github.com/kdschlosser/lv_cpython"
Documentation = "https://docs.lvgl.io/master/index.html"
Repository = "https://github.com/kdschlosser/lv_cpython"
Issues = "https://github.com/kdschlosser/lv_cpython/issues"
Forum = "https://forum.lvgl.io/"

[build-system]
requires=[
    "setuptools>=67.8.0",
    "wheel>=0.40.0",
    "pyMSVC>=0.5.2;sys_platform=='win32'",
    "requests>=2.3.0",
    "pycparser>=2.21",
    "cffi>=1.15.1"
]
build-backend="setuptools.build_meta"